[master] progress so far - working materia to locations and materia to abilities relationshsips.

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,6 @@
 home:
     path: /
     controller: App\Controller\HomeController::index
+mater-finder:
+    path: /materia-finder
+    controller: App\Controller\MateriaFinderController::index
